fix bug again