@@ -28,6 +28,9 @@
         <version>3.5.1</version>
         <configuration>
           <mainClass>shufflingway.MainWindow</mainClass>
+          <jvmArgs>
+            <jvmArg>--enable-native-access=ALL-UNNAMED</jvmArg>
+          </jvmArgs>
         </configuration>
       </plugin>
       <plugin>
